[project]
name = "boringiceberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boringcatalog>=0.4.0",
    "duckdb>=1.4.1",
    "getdaft>=0.5.0",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pyiceberg>=0.10.0",
]
